Fix z-index of header

--- a/src/assets/scss/components/_header.scss
+++ b/src/assets/scss/components/_header.scss
@@ -2,7 +2,7 @@
 	width: 100%;
 	position: fixed;
 	top: grid(1.5);
-    z-index: 10;
+    z-index: 2;
 	@media #{$small-only}{
 		width: 100%;
 	    height: 100%;
